# functions-tools-agents-langchain

./: .gitignore  Function_Calling_LangChain.ipynb  LCEL.ipynb  Tools_Routing.ipynb  functions-tools-agents-langchain.ipynb  main.py  pyproject.toml
